Import of CLOTHO/CAM-App-0.05 from CPAN.
gitpan-cpan-distribution: CAM-App
gitpan-cpan-version:      0.05
gitpan-cpan-path:         CLOTHO/CAM-App-0.05.tar.gz
gitpan-cpan-author:       CLOTHO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-CAM::Template
+CAM::App
 
 "CAM" stands for Clotho Advanced Media, www.clotho.com, which
 supported most of the development of this module.  Contact us at
